# rules-gala

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  LICENSE  README.md  RELEASING.md  bazel_registry.json
gala/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
gala/private/: BUILD.bazel  gala_library.bzl  gala_mod_parser.bzl  gala_test.bzl  gazelle.bzl  test_rules.bzl  transpile.bzl
gazelle/: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
gazelle/cmd/galaimports/: BUILD.bazel  main.go  main_test.go
gazelle/gala/: BUILD.bazel  composite.go  composite_test.go  config.go  defs.bzl  generate.go  generate_test.go  imports.go  imports_test.go  lang.go  resolve.go  resolve_test.go
gazelle/gala/testdata/benchlike/: coll.gala  perf_test.gala
gazelle/gala/testdata/binlike/: main.gala
gazelle/gala/testdata/internalpkg/: internal_lib.gala  internal_lib2_test.gala  internal_lib_test.gala
gazelle/gala/testdata/mathlike/: math.gala
gazelle/gala/testdata/mixedgopkg/: lib.gala  lib.gen.go  lib_test.gala  mixed_internal_test.gala  native.go
gazelle/gala/testdata/multitest/: alpha_test.gala  beta_test.gala  core.gala
gazelle/gala/testdata/regexlike/: regex.gala  regex_test.gala
modules/gala/: metadata.json
modules/gala/0.51.0/: MODULE.bazel  source.json
modules/gala/0.52.0/: MODULE.bazel  source.json
modules/gala/0.52.1/: MODULE.bazel  source.json
modules/gala/0.53.0/: MODULE.bazel  source.json
modules/gala/0.53.1/: MODULE.bazel  source.json
modules/gala/0.54.0/: MODULE.bazel  source.json
modules/gala/0.55.0/: MODULE.bazel  source.json
modules/gala/0.56.0/: MODULE.bazel  source.json
modules/gala/0.56.1/: MODULE.bazel  source.json
modules/gala/0.60.0/: MODULE.bazel  source.json
modules/gala/0.61.0/: MODULE.bazel  source.json
modules/gala/0.61.1/: MODULE.bazel  source.json
modules/gala/0.62.0/: MODULE.bazel  source.json
modules/gala/0.63.0/: MODULE.bazel  presubmit.yml  source.json
modules/gala/0.70.0/: MODULE.bazel  source.json
modules/gala/0.70.1/: MODULE.bazel  source.json
modules/gala/0.71.0/: MODULE.bazel  source.json
modules/gala_gazelle/: metadata.json
modules/gala_gazelle/0.1.0/: MODULE.bazel  source.json
modules/gala_gazelle/0.1.2/: MODULE.bazel  source.json
modules/gala_gazelle/0.1.3/: presubmit.yml  source.json
modules/gala_gazelle/0.1.4/: MODULE.bazel  source.json
modules/gala_gazelle/0.1.5/: MODULE.bazel  source.json
modules/gala_gazelle/0.1.6/: MODULE.bazel  source.json
modules/gala_gazelle/0.1.7/: MODULE.bazel  source.json
modules/gala_gazelle/0.2.0/: MODULE.bazel  source.json
modules/gala_gazelle/0.2.1/: MODULE.bazel  source.json
modules/gala_gazelle/0.2.2/: MODULE.bazel  source.json
modules/gala_gazelle/0.2.4/: MODULE.bazel  source.json
modules/gala_gazelle/0.2.5/: source.json
modules/gala_team/: metadata.json
modules/gala_team/0.10.0/: MODULE.bazel  source.json
modules/gala_team/0.11.0/: MODULE.bazel  source.json
modules/gala_tui/: metadata.json
modules/rules_gala/: metadata.json
(+34 files in other folders)
