load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "galaimports_lib",
    srcs = ["main.go"],
    importpath = "github.com/martianoff/rules-gala/gazelle/cmd/galaimports",
    visibility = ["//visibility:private"],
)

# A lightweight stand-in for `gala imports --json` used to develop and dogfood
# the extension before the production subcommand ships.
go_binary(
    name = "galaimports",
    embed = [":galaimports_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "galaimports_test",
    srcs = ["main_test.go"],
    embed = [":galaimports_lib"],
)
